changed to Titan Knockoff with gears

--- a/cirno/klipper/octopus-a20m.cfg
+++ b/cirno/klipper/octopus-a20m.cfg
@@ -9,6 +9,9 @@
 # boards use a "128KiB bootloader" and a "25Mhz crystal".
 
 # See docs/Config_Reference.md for a description of parameters.
+#KAMP
+[exclude_object]
+[include /etc/nixos/klipper/KAMP_Settings.cfg]
 
 # Driver0
 [stepper_x]
@@ -85,21 +88,25 @@ max_extrude_only_distance: 360
 [extruder_stepper extruder_stepper]
 extruder: extruder
 step_pin: PF9
-dir_pin: !PF10
+dir_pin: PF10
 enable_pin: !PG2
 microsteps: 16
-rotation_distance: 31.5 
 pressure_advance = 0.57
+#rotation_distance = diameter of <hobbed_gear> * 3.14
+rotation_distance: 24.5 #7.8mm dia
+gear_ratio: 3:1 #titan extruder clone ratio (66:22)
 
 # Driver5
 [extruder_stepper extruder_stepper1]
 extruder: extruder
 step_pin: PC13
-dir_pin: !PF0
+dir_pin: PF0
 enable_pin: !PF1
 microsteps: 16
-rotation_distance: 31.5 
 pressure_advance = 0.57
+#rotation_distance = diameter of <hobbed_gear> * 3.14
+rotation_distance: 24.5 #7.8mm dia
+gear_ratio: 3:1 #titan extruder clone ratio (66:22)
 
 #[filament_switch_sensor material_2]
 #switch_pin: PG14
@@ -217,7 +224,7 @@ aliases:
 [bltouch]
 sensor_pin: ^PB7
 control_pin: PB6
-z_offset: 2.500
+z_offset: 2.450
 x_offset: -38
 y_offset: 2
 
@@ -310,3 +317,10 @@ gcode:
 shaper_freq_x: 32.6  # frequency for the X mark of the test model
 shaper_freq_y: 41.7  # frequency for the Y mark of the test model
 shaper_type: mzv 
+
+[virtual_sdcard]
+path: /var/lib/moonraker/gcodes/
+
+[pause_resume]
+
+[display_status]
